--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.1.3",
     "react-typed": "^1.2.0",
+    "recharts": "^2.1.13",
     "tsparticles": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
