--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "bootstrap": "^4.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,7 +18,7 @@
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.1.3",
     "react-typed": "^1.2.0",
-    "recharts": "^2.1.13",
+    "recharts": "^2.0.6",
     "tsparticles": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
